--- a/Modelos/Redes Neuronales Artificiales.ipynb
+++ b/Modelos/Redes Neuronales Artificiales.ipynb
@@ -165,14 +165,10 @@
     "    FP_array = np.zeros([4])\n",
     "    FN_array = np.zeros([4])\n",
     "    TP_array = np.zeros([4])\n",
-    "    \n",
     "    parameters = {'hidden_layer_sizes':[x for x in itertools.product((5,10),repeat=2)]}\n",
     "    RNA = MLPClassifier(activation='tanh',max_iter = 1000)\n",
-    "    clf = GridSearchCV(RNA, parameters)\n",
-    "    \n",
     "    group_ShuffleSplit = GroupShuffleSplit(n_splits=60, train_size=.75)\n",
-    "    KNN = KNeighborsClassifier()\n",
-    "    clf = GridSearchCV(KNN, parameters, cv=group_ShuffleSplit.get_n_splits(X, Y[:,2], G))\n",
+    "    clf = GridSearchCV(RNA, parameters, cv=group_ShuffleSplit.get_n_splits(X, Y[:,2], G))\n",
     "    scaler = MinMaxScaler()\n",
     "    scaler.fit_transform(X)\n",
     "    for j in range(4):\n",
