--- a/Modelos/Redes Neuronales Artificiales.ipynb
+++ b/Modelos/Redes Neuronales Artificiales.ipynb
@@ -9,12 +9,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
+    "import itertools\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.model_selection import GroupShuffleSplit\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -167,7 +168,7 @@
     "    TP_array = np.zeros([4])\n",
     "    parameters = {'hidden_layer_sizes':[x for x in itertools.product((5,10),repeat=2)]}\n",
     "    RNA = MLPClassifier(activation='tanh',max_iter = 1000)\n",
-    "    group_ShuffleSplit = GroupShuffleSplit(n_splits=60, train_size=.75)\n",
+    "    group_ShuffleSplit = GroupShuffleSplit(n_splits=60, train_size=.75, random_state=42)\n",
     "    clf = GridSearchCV(RNA, parameters, cv=group_ShuffleSplit.get_n_splits(X, Y[:,2], G))\n",
     "    scaler = MinMaxScaler()\n",
     "    scaler.fit_transform(X)\n",
