Fisher - Stratified - Selección

--- a/Modelos/Redes Neuronales Artificiales.ipynb
+++ b/Modelos/Redes Neuronales Artificiales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import GroupShuffleSplit\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -288,11 +291,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RNA (StratifiedKFold)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def RNA_model_SKF(graficar = False):\n",
+    "    initial_time = time.time()\n",
+    "    sensitivity_array = np.zeros([4,10])\n",
+    "    efficiency_array = np.zeros([4])\n",
+    "    error = np.zeros(4)\n",
+    "    precision_array = np.zeros([4,10])\n",
+    "    fscore_array = np.zeros([4,10])\n",
+    "    TN_array = np.zeros([4])\n",
+    "    FP_array = np.zeros([4])\n",
+    "    FN_array = np.zeros([4])\n",
+    "    TP_array = np.zeros([4])\n",
+    "    parameters = {'hidden_layer_sizes':[x for x in itertools.product((5,10),repeat=2)]}\n",
+    "    RNA = MLPClassifier(activation='tanh',max_iter = 1000)\n",
+    "    SKFold = StratifiedKFold(n_splits=10, random_state=42)\n",
+    "    clf = GridSearchCV(RNA, parameters, cv=SKFold.get_n_splits(X, Y[:,2]))\n",
+    "    scaler = MinMaxScaler()\n",
+    "    scaler.fit_transform(X)\n",
+    "    for j in range(4):\n",
+    "        for train, test in SKFold.split(X, Y[:,2]):\n",
+    "            Xtrain = X[train,:]\n",
+    "            Ytrain = Y[train,2]\n",
+    "            Xtest = X[test,:]\n",
+    "            Ytest = Y[test,2]\n",
+    "        clf.fit(Xtrain, Ytrain)\n",
+    "        Yest = clf.best_estimator_.predict(Xtest)\n",
+    "\n",
+    "        #code for calculating recall \n",
+    "        sensitivity = recall_score(Ytest, Yest, average=None)\n",
+    "        sensitivity_array[j] = sensitivity\n",
+    "\n",
+    "        #code for calculating accuracy \n",
+    "        efficiency = accuracy_score(Ytest, Yest, normalize=True)\n",
+    "        efficiency_array[j] = efficiency\n",
+    "\n",
+    "        #code for calculating precision \n",
+    "        precision = precision_score(Ytest, Yest, average=None)\n",
+    "        precision_array[j] = precision\n",
+    "\n",
+    "        #code for calculating f1 score \n",
+    "        fscore = f1_score(Ytest, Yest, average=None)\n",
+    "        fscore_array[j] = fscore\n",
+    "\n",
+    "        #code for calculating error\n",
+    "        error[j] = classification_error(Yest, Ytest)\n",
+    "        \n",
+    "    if graficar == True:\n",
+    "        cm = confusion_matrix(Ytest, Yest, normalize='pred')\n",
+    "        columnas = ['Clase %s'%(i) for i in list(ascii_uppercase)[0:len(np.unique(Yest))]]\n",
+    "        df_cm = pd.DataFrame(cm,index = columnas, columns = columnas)\n",
+    "        grafica = sns.heatmap(df_cm, cmap = 'Greens', annot = True)\n",
+    "        grafica.set(xlabel = 'Verdaderos', ylabel = 'Predicciones')\n",
+    "    \n",
+    "    return clf.best_estimator_, str(np.mean(sensitivity_array)), str(np.std(sensitivity_array)), str(np.mean(efficiency_array)), str(np.std(efficiency_array)), str(np.mean(precision_array)), str(np.std(precision_array)),  str(np.mean(fscore_array)), str(np.std(fscore_array)), str(np.mean(error)), str(np.std(error)), str(time.time()-initial_time)\n",
+    "\n",
+    "modelRNA, sensitivity, sensitivity_interval, efficiency, efficiency_interval, precision, precision_interval, f, f_interval, error, std_error, tiempo = RNA_model_SKF(graficar = True)\n",
+    "print('The best model was', modelRNA,\n",
+    "        '\\n\\nSensibilidad:', sensitivity,'- Intervalo Sensibilidad:', sensitivity_interval,\n",
+    "        '\\nEficiencia:', efficiency,'- Intervalo Eficiencia:', efficiency_interval,\n",
+    "        '\\nPrecision:', precision,'- Intervalo Precision:', precision_interval,\n",
+    "        '\\nF-Score:',f,'- Intervalo F-Score:', f_interval,\n",
+    "        '\\nError_Prueba:',error,'- Intervalo Error:', std_error,\n",
+    "        '\\nTiempo ejecución:', tiempo)"
+   ]
   }
  ],
  "metadata": {
